# day-n-nite

./: '  .gitignore  .vimspector.json  Cargo.toml  README.md
src/: cli.rs  dnn.rs  main.rs  os.rs  themer.rs  util.rs
src/dnn_configurator/: mod.rs
src/std_wrapper/: command.rs  mod.rs
src/system_info/: macos.rs  mod.rs
src/themed_application/: application_script.rs  macos.rs  mod.rs
src/themer/: alacritty.rs  bat.rs  disk_record.rs  emit.rs  mod.rs  system_os.rs  system_windows.rs  terminal.rs  vim.rs  wezterm.rs
