[package]
name = "day-n-nite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "4.0"
config = "0.13.1"
clap = { version = "3.1.18", features = ["derive"] }
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
regex = "1.5"
lazy_static = "1.4.0"
